# Jakal-flow

./: .gitignore  AGENTS.md  README.ko.md  README.md  UI_FEATURES_KO.txt  bridge_perf.jsonl  index.html  main.py  package-lock.json  pyproject.toml  run-terminal-bench.ps1  share_server_config.json  site.css  site.js  st4_join_error_summary.txt  todo.md
.claude/: settings.local.json
.test_tmp/share_debug/: share_server.json
.test_tmp/share_debug_devnull/: share_server.json
.test_tmp/ui_bridge_share_start_zero/: share_server_config.json
.tmp_parallel_merge_debugger_test/workspace/: registry.json
None/: public_tunnel.json
chat_sessions/: CHAT_SESSIONS.txt
chat_sessions/logs/: chat-20260329133340-adb8d5.messages.txt  chat-20260329140257-fedc9c.messages.txt  chat-20260329140259-3978a5.messages.txt  (+4 more)
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.js
docs/: TERMINAL_BENCH.md
jakal-flow-logs/: ui_bridge_perf.jsonl  ui_events.jsonl
jakal-flow-logx/: README.md
tests/: test_bridge_server.py  test_codex_app_server.py  test_codex_runner.py  test_commit_naming.py  test_contract_wave.py  test_desktop_launcher.py  test_desktop_runtime_bundle.py  test_execution_plan_helpers.py  test_failure_reporting.py  test_git_ops.py  test_lit_integration.py  test_optimization.py  test_process_supervisor.py  test_project_snapshot.py  test_provider_fallbacks.py  test_share_monitoring.py  test_text_reading.py  test_tooling_manager.py  test_ui_bridge.py  test_verification.py
website/: README.md  index.html  share.html  share.js  site.css  site.js
(+377 files in other folders)
