[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jakal-flow"
version = "0.1.0"
description = "Production-oriented multi-repository Codex CLI orchestrator"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
jakal-flow = "jakal_flow.cli:main"
jakal-flow-ui-bridge = "jakal_flow.ui_bridge:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"jakal_flow" = ["docs/*.txt", "docs/*.md"]
